Fixed spacing once again. Added a description of course development

--- a/css/resume.css
+++ b/css/resume.css
@@ -15,10 +15,6 @@ body {
 	text-transform: uppercase;
 }
 
-.section {
-
-}
-
 .sectionname {
 	font-size: 120%;
 }
